// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemInfo Component Tests rendering ItemInfo Renders Item Info Card with AuditWorkList type and InProgress status enabled  1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffffff",
      "padding": 8,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <View>
      <Text
        style={
          {
            "color": "#d938ab",
            "fontSize": 12,
            "fontWeight": "bold",
          }
        }
      >
        [missing "en.EXCEPTION.NSFL" translation]
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            {
              "color": "#d938ab",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
        >
          [missing "en.AUDITS.AUDITS" translation]
           
        </Text>
        <Text
          style={
            {
              "color": "#d938ab",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
        >
          -
           
          [missing "en.AUDITS.IN_PROGRESS" translation]
        </Text>
      </View>
      <Text
        style={
          {
            "fontSize": 16,
            "fontWeight": "bold",
            "marginVertical": 4,
          }
        }
      >
        Test item
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "marginBottom": 4,
            "marginTop": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#616161",
              "fontSize": 12,
            }
          }
        >
          [missing "en.ITEM.ITEM" translation] 10359
        </Text>
        <Text
          style={
            {
              "color": "#616161",
              "fontSize": 12,
              "marginHorizontal": 8,
            }
          }
        >
          |
        </Text>
        <Text
          style={
            {
              "color": "#616161",
              "fontSize": 12,
            }
          }
        >
          [missing "en.ITEM.UPC" translation] 286201035990
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#616161",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        [missing "en.ITEM.STATUS" translation]: Active
      </Text>
      <Text
        style={
          {
            "color": "#616161",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        [missing "en.ITEM.CATEGORY" translation]: 17-test
      </Text>
    </View>
  </View>
  <CollapsibleCard
    icon=""
    isOpened={false}
    title="[missing "en.ITEM.ADDITIONAL_ITEM_DETAILS" translation]"
    titleStyle={{}}
  >
    <View
      testID="additional-item-details"
    >
      <ItemDetailsList
        indentAfterFirstRow={false}
        rows={
          [
            {
              "label": "[missing "en.ITEM.VENDOR_PACK" translation]",
              "value": 33,
            },
            {
              "label": "[missing "en.ITEM.COLOR" translation]",
              "value": "red",
            },
            {
              "label": "[missing "en.ITEM.SIZE" translation]",
              "value": 88,
            },
            {
              "label": "[missing "en.ITEM.PRICE_BEFORE_TAX" translation]",
              "value": "$15.05",
            },
            {
              "label": "[missing "en.ITEM.MARGIN" translation]",
              "value": "14.00%",
            },
            {
              "label": "[missing "en.ITEM.GROSS_PROFIT" translation]",
              "value": "$2.50",
            },
          ]
        }
      />
    </View>
  </CollapsibleCard>
  <Text
    style={
      {
        "fontSize": 16,
        "marginBottom": 6,
        "marginTop": 16,
      }
    }
  >
    $14.00
  </Text>
  <Button
    backgroundColor="#0071e9"
    disabled={false}
    height={45}
    onPress={[Function]}
    radius={5}
    style={
      {
        "marginVertical": 10,
      }
    }
    testID="print-price-sign"
    title="[missing "en.PRINT.PRICE_SIGN" translation]"
    titleColor="#0071e9"
    titleFontSize={16}
    titleFontWeight="normal"
    type={2}
    width={-1}
  />
</View>
`;

exports[`ItemInfo Component Tests rendering ItemInfo Renders an Item Info component with additional item details 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffffff",
      "padding": 8,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <View>
      <Text
        style={
          {
            "color": "#d938ab",
            "fontSize": 12,
            "fontWeight": "bold",
          }
        }
      >
        [missing "en.EXCEPTION.NSFL" translation]
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
      />
      <Text
        style={
          {
            "fontSize": 16,
            "fontWeight": "bold",
            "marginVertical": 4,
          }
        }
      >
        Test item
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "marginBottom": 4,
            "marginTop": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#616161",
              "fontSize": 12,
            }
          }
        >
          [missing "en.ITEM.ITEM" translation] 10359
        </Text>
        <Text
          style={
            {
              "color": "#616161",
              "fontSize": 12,
              "marginHorizontal": 8,
            }
          }
        >
          |
        </Text>
        <Text
          style={
            {
              "color": "#616161",
              "fontSize": 12,
            }
          }
        >
          [missing "en.ITEM.UPC" translation] 286201035990
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#616161",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        [missing "en.ITEM.STATUS" translation]: Active
      </Text>
      <Text
        style={
          {
            "color": "#616161",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        [missing "en.ITEM.CATEGORY" translation]: 17-test
      </Text>
    </View>
  </View>
  <CollapsibleCard
    icon=""
    isOpened={false}
    title="[missing "en.ITEM.ADDITIONAL_ITEM_DETAILS" translation]"
    titleStyle={{}}
  >
    <View
      testID="additional-item-details"
    >
      <ItemDetailsList
        indentAfterFirstRow={false}
        rows={
          [
            {
              "label": "[missing "en.ITEM.VENDOR_PACK" translation]",
              "value": 33,
            },
            {
              "label": "[missing "en.ITEM.COLOR" translation]",
              "value": "red",
            },
            {
              "label": "[missing "en.ITEM.SIZE" translation]",
              "value": 88,
            },
            {
              "label": "[missing "en.ITEM.PRICE_BEFORE_TAX" translation]",
              "value": "$15.05",
            },
            {
              "label": "[missing "en.ITEM.MARGIN" translation]",
              "value": "14.00%",
            },
            {
              "label": "[missing "en.ITEM.GROSS_PROFIT" translation]",
              "value": "$2.50",
            },
          ]
        }
      />
    </View>
  </CollapsibleCard>
  <Text
    style={
      {
        "fontSize": 16,
        "marginBottom": 6,
        "marginTop": 16,
      }
    }
  >
    $14.00
  </Text>
  <Button
    backgroundColor="#0071e9"
    disabled={false}
    height={45}
    onPress={[Function]}
    radius={5}
    style={
      {
        "marginVertical": 10,
      }
    }
    testID="print-price-sign"
    title="[missing "en.PRINT.PRICE_SIGN" translation]"
    titleColor="#0071e9"
    titleFontSize={16}
    titleFontWeight="normal"
    type={2}
    width={-1}
  />
</View>
`;

exports[`ItemInfo Component Tests rendering ItemInfo Renders an Item Info component without additional item details 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffffff",
      "padding": 8,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <View>
      <Text
        style={
          {
            "color": "#d938ab",
            "fontSize": 12,
            "fontWeight": "bold",
          }
        }
      >
        [missing "en.EXCEPTION.NSFL" translation]
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
      />
      <Text
        style={
          {
            "fontSize": 16,
            "fontWeight": "bold",
            "marginVertical": 4,
          }
        }
      >
        Test item
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "marginBottom": 4,
            "marginTop": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#616161",
              "fontSize": 12,
            }
          }
        >
          [missing "en.ITEM.ITEM" translation] 10359
        </Text>
        <Text
          style={
            {
              "color": "#616161",
              "fontSize": 12,
              "marginHorizontal": 8,
            }
          }
        >
          |
        </Text>
        <Text
          style={
            {
              "color": "#616161",
              "fontSize": 12,
            }
          }
        >
          [missing "en.ITEM.UPC" translation] 286201035990
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#616161",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        [missing "en.ITEM.STATUS" translation]: Active
      </Text>
      <Text
        style={
          {
            "color": "#616161",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        [missing "en.ITEM.CATEGORY" translation]: 17-test
      </Text>
    </View>
  </View>
  <CollapsibleCard
    icon=""
    isOpened={false}
    title="[missing "en.ITEM.ADDITIONAL_ITEM_DETAILS" translation]"
    titleStyle={{}}
  >
    <View
      testID="additional-item-details"
    >
      <ItemDetailsList
        indentAfterFirstRow={false}
        rows={
          [
            {
              "label": "[missing "en.ITEM.VENDOR_PACK" translation]",
              "value": 33,
            },
            {
              "label": "[missing "en.ITEM.COLOR" translation]",
              "value": "red",
            },
            {
              "label": "[missing "en.ITEM.SIZE" translation]",
              "value": 88,
            },
            {
              "label": "[missing "en.ITEM.PRICE_BEFORE_TAX" translation]",
              "value": "$15.05",
            },
            {
              "label": "[missing "en.ITEM.MARGIN" translation]",
              "value": "14.00%",
            },
            {
              "label": "[missing "en.ITEM.GROSS_PROFIT" translation]",
              "value": "$2.50",
            },
          ]
        }
      />
    </View>
  </CollapsibleCard>
  <Text
    style={
      {
        "fontSize": 16,
        "marginBottom": 6,
        "marginTop": 16,
      }
    }
  >
    $14.00
  </Text>
  <Button
    backgroundColor="#0071e9"
    disabled={false}
    height={45}
    onPress={[Function]}
    radius={5}
    style={
      {
        "marginVertical": 10,
      }
    }
    testID="print-price-sign"
    title="[missing "en.PRINT.PRICE_SIGN" translation]"
    titleColor="#0071e9"
    titleFontSize={16}
    titleFontWeight="normal"
    type={2}
    width={-1}
  />
</View>
`;

exports[`ItemInfo Component Tests rendering ItemInfo Renders an Item Info component without print print price sign button enabled 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffffff",
      "padding": 8,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <View>
      <Text
        style={
          {
            "color": "#d938ab",
            "fontSize": 12,
            "fontWeight": "bold",
          }
        }
      >
        [missing "en.EXCEPTION.NSFL" translation]
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
      />
      <Text
        style={
          {
            "fontSize": 16,
            "fontWeight": "bold",
            "marginVertical": 4,
          }
        }
      >
        Test item
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "marginBottom": 4,
            "marginTop": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#616161",
              "fontSize": 12,
            }
          }
        >
          [missing "en.ITEM.ITEM" translation] 10359
        </Text>
        <Text
          style={
            {
              "color": "#616161",
              "fontSize": 12,
              "marginHorizontal": 8,
            }
          }
        >
          |
        </Text>
        <Text
          style={
            {
              "color": "#616161",
              "fontSize": 12,
            }
          }
        >
          [missing "en.ITEM.UPC" translation] 286201035990
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#616161",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        [missing "en.ITEM.STATUS" translation]: Active
      </Text>
      <Text
        style={
          {
            "color": "#616161",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        [missing "en.ITEM.CATEGORY" translation]: 17-test
      </Text>
    </View>
  </View>
  <CollapsibleCard
    icon=""
    isOpened={false}
    title="[missing "en.ITEM.ADDITIONAL_ITEM_DETAILS" translation]"
    titleStyle={{}}
  >
    <View
      testID="additional-item-details"
    >
      <ItemDetailsList
        indentAfterFirstRow={false}
        rows={
          [
            {
              "label": "[missing "en.ITEM.VENDOR_PACK" translation]",
              "value": 33,
            },
            {
              "label": "[missing "en.ITEM.COLOR" translation]",
              "value": "red",
            },
            {
              "label": "[missing "en.ITEM.SIZE" translation]",
              "value": 88,
            },
            {
              "label": "[missing "en.ITEM.PRICE_BEFORE_TAX" translation]",
              "value": "$15.05",
            },
            {
              "label": "[missing "en.ITEM.MARGIN" translation]",
              "value": "14.00%",
            },
            {
              "label": "[missing "en.ITEM.GROSS_PROFIT" translation]",
              "value": "$2.50",
            },
          ]
        }
      />
    </View>
  </CollapsibleCard>
  <Text
    style={
      {
        "fontSize": 16,
        "marginBottom": 6,
        "marginTop": 16,
      }
    }
  >
    $14.00
  </Text>
</View>
`;
